--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.7",
+    "next": "^15.1.6",
     "next-themes": "latest",
     "nodemailer": "^7.0.11",
     "postprocessing": "6.38.0",
-    "react": "19.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-native": "latest",
     "react-resizable-panels": "^2.1.7",
